--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,36 +1,63 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "29.0.3"
+    namespace 'com.example.todo'
+    compileSdk 34  // Update this with your desired compile SDK version
+
 
     defaultConfig {
         applicationId "com.example.todo"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 24  // Minimum SDK version
+        targetSdkVersion 34  // Target SDK version (should match compileSdkVersion)
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"  // Use AndroidX test runner
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        viewBinding {
+            enabled = true
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
+    // Ensure Kotlin and Java JVM compatibility is set correctly
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17  // Set Java source compatibility to 17
+        targetCompatibility = JavaVersion.VERSION_17  // Set Java target compatibility to 17
+    }
+
+
+
+    kotlinOptions {
+        jvmTarget = "17"  // Set Kotlin to target JVM 17
+    }
 }
 
 dependencies {
+
+
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //noinspection GradleDependency
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+
+    // Replace deprecated Android Support libraries with AndroidX libraries
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'androidx.core:core:1.13.0'
+
+    testImplementation 'junit:junit:4.13.2'  // Update JUnit version
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'  // Update to AndroidX Test JUnit
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'  // Update to AndroidX Espresso
 }
